--- a/Dollar Cost Averaging Strategy Explained using Python Backtesting.ipynb
+++ b/Dollar Cost Averaging Strategy Explained using Python Backtesting.ipynb
@@ -513,7 +513,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Chart](/home/usamabuttar/Projects/QuantPy/Backtest/Figure_0.png \"Backtest\")"
+    "### Buy And Hold\n",
+    "![Chart](/home/usamabuttar/Projects/QuantPy/Backtest/BuyAndHold.png \"Buy And Hold\")\n",
+    "\n",
+    "### Dollar Cost Average\n",
+    "![Chart](/home/usamabuttar/Projects/QuantPy/Backtest/DollarCostAverage.png \"Dollar Cost Average\")"
    ]
   },
   {
